--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     ]
   },
   "scripts": {
-    "build": "webpack",
+    "build": "npx webpack",
     "lambda:clean": "rm -rf handler.zip dist",
     "lambda:zip": "zip -r handler.zip dist",
     "lambda:s3:upload": "aws s3 cp ./handler.zip s3://prb0t",
