--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-env": "^1.7.0",
     "npm-run-all": "^4.1.2",
     "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.5",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
